--- a/#src/html/doosan.html
+++ b/#src/html/doosan.html
@@ -258,37 +258,37 @@
                 </div>
                 <div class="pages-pR1 row">
                     <div class="col-lg-3 col-md-6">
-                        <a href="" data-lightbox="roadtrip">
+                        <a href="images/doosan/doosan-pages1.png" data-lightbox="roadtrip">
                             <img src="images/doosan/doosan-pages1.png" alt="page1">
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <a href="" data-lightbox="roadtrip">
+                        <a href="images/doosan/doosan-pages2.png" data-lightbox="roadtrip">
                             <img src="images/doosan/doosan-pages2.png" alt="page2">
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <a href="" data-lightbox="roadtrip">
+                        <a href="images/doosan/doosan-pages3.png" data-lightbox="roadtrip">
                             <img src="images/doosan/doosan-pages3.png" alt="page3">
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <a href="" data-lightbox="roadtrip">
+                        <a href="images/doosan/doosan-pages4.png" data-lightbox="roadtrip">
                             <img src="images/doosan/doosan-pages4.png" alt="page4">
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <a href="" data-lightbox="roadtrip">
+                        <a href="images/doosan/doosan-pages5.png" data-lightbox="roadtrip">
                             <img src="images/doosan/doosan-pages5.png" alt="page5">
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <a href="" data-lightbox="roadtrip">
+                        <a href="images/doosan/doosan-pages6.png" data-lightbox="roadtrip">
                             <img src="images/doosan/doosan-pages6.png" alt="page6">
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <a href="" data-lightbox="roadtrip">
+                        <a href="images/doosan/doosan-pages7.png" data-lightbox="roadtrip">
                             <img src="images/doosan/doosan-pages7.png" alt="page7">
                         </a>
                     </div>
@@ -405,7 +405,7 @@
 </footer>
 <script src="libraries/libraries.min.js"></script>
 <script src="libraries/wow/wow.min.js"></script>
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js" integrity="sha512-k2GFCTbp9rQU412BStrcD/rlwv1PYec9SNrkbQlo6RZCf75l6KcC3UwDY8H5n5hl4v77IDtIPwOk9Dqjs/mMBQ==" crossorigin="anonymous"></script>-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js" integrity="sha512-k2GFCTbp9rQU412BStrcD/rlwv1PYec9SNrkbQlo6RZCf75l6KcC3UwDY8H5n5hl4v77IDtIPwOk9Dqjs/mMBQ==" crossorigin="anonymous"></script>
 <script src="scripts/script.js"></script>
 <script>
     new WOW().init();
