--- a/#src/html/index.html
+++ b/#src/html/index.html
@@ -130,10 +130,10 @@
 										<div class="swiper-wrapper">
 											<div class="swiper-slide"><img class="home-portfolio-item-image" data-src="images/home-portfolio/slide-unipro.jpg" alt="portfolio unipro"></div>
 											<div class="swiper-slide"><img class="home-portfolio-item-image" data-src="images/home-portfolio/slide-doosan.jpg" alt="portfolio doosan"></div>
-											<div class="swiper-slide"><img class="home-portfolio-item-image" data-src="images/home-portfolio/slide-h&amp;w.jpg" alt="portfolio h&amp;w"></div>
+<!--											<div class="swiper-slide"><img class="home-portfolio-item-image" data-src="images/home-portfolio/slide-h&amp;w.jpg" alt="portfolio h&amp;w"></div>-->
 											<div class="swiper-slide"><img class="home-portfolio-item-image" data-src="images/home-portfolio/slide-liom.jpg" alt="portfolio liom"></div>
 											<div class="swiper-slide"><img class="home-portfolio-item-image" data-src="images/home-portfolio/slide-montegrappa.jpg" alt="portfolio montegrappa"></div>
-											<div class="swiper-slide"><img class="home-portfolio-item-image" data-src="images/home-portfolio/slide-kiev-aroma.jpg" alt="portfolio kiev-aroma"></div>
+<!--											<div class="swiper-slide"><img class="home-portfolio-item-image" data-src="images/home-portfolio/slide-kiev-aroma.jpg" alt="portfolio kiev-aroma"></div>-->
 										</div>
 									</div>
 									<div class="swiper-pagination" id="home-portfolio-item-pagination"></div>
@@ -143,10 +143,10 @@
 										<div class="swiper-wrapper">
 											<div class="swiper-slide"><img data-src="images/home-portfolio/logo-unipro.svg" alt="logo-unipro"></div>
 											<div class="swiper-slide"><img data-src="images/home-portfolio/logo-doosan.svg" alt="logo-doosan"></div>
-											<div class="swiper-slide"><img data-src="images/home-portfolio/logo-h&amp;w.svg" alt="logo-h&amp;w"></div>
+<!--											<div class="swiper-slide"><img data-src="images/home-portfolio/logo-h&amp;w.svg" alt="logo-h&amp;w"></div>-->
 											<div class="swiper-slide"><img data-src="images/home-portfolio/logo-liom.svg" alt="logo-liom"></div>
 											<div class="swiper-slide"><img data-src="images/home-portfolio/logo-montegrappa.svg" alt="logo-montegrappa"></div>
-											<div class="swiper-slide"><img data-src="images/home-portfolio/logo-kiev-aroma.svg" alt="logo-kiev-aroma"></div>
+<!--											<div class="swiper-slide"><img data-src="images/home-portfolio/logo-kiev-aroma.svg" alt="logo-kiev-aroma"></div>-->
 										</div>
 									</div>
 								</div>
@@ -165,13 +165,13 @@
 												<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path d="M3.125 5.3125C3.125 4.105 4.105 3.125 5.3125 3.125H15.9375C16.1861 3.125 16.4246 3.22377 16.6004 3.39959C16.7762 3.5754 16.875 3.81386 16.875 4.0625C16.875 4.31114 16.7762 4.5496 16.6004 4.72541C16.4246 4.90123 16.1861 5 15.9375 5H5.3125C5.22962 5 5.15013 5.03292 5.09153 5.09153C5.03292 5.15013 5 5.22962 5 5.3125V24.6875C5 24.86 5.14 25 5.3125 25H24.6875C24.7704 25 24.8499 24.9671 24.9085 24.9085C24.9671 24.8499 25 24.7704 25 24.6875V14.0625C25 13.8139 25.0988 13.5754 25.2746 13.3996C25.4504 13.2238 25.6889 13.125 25.9375 13.125C26.1861 13.125 26.4246 13.2238 26.6004 13.3996C26.7762 13.5754 26.875 13.8139 26.875 14.0625V24.6875C26.875 25.2677 26.6445 25.8241 26.2343 26.2343C25.8241 26.6445 25.2677 26.875 24.6875 26.875H5.3125C4.73234 26.875 4.17594 26.6445 3.7657 26.2343C3.35547 25.8241 3.125 25.2677 3.125 24.6875V5.3125Z" fill="#FFCC00"/>
 												</svg></a></div>
-																							<div class="swiper-slide"><a class="home-portfolio-item-link" href="#" aria-label="project h&amp;w link"><svg class="arrow" width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+																							<div class="swiper-slide"><a class="home-portfolio-item-link" href="/liom.html" aria-label="project h&amp;w link"><svg class="arrow" width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path d="M19.3749 2.8125C19.3749 2.56386 19.4737 2.3254 19.6495 2.14959C19.8254 1.97377 20.0638 1.875 20.3124 1.875H27.1874C27.4361 1.875 27.6745 1.97377 27.8504 2.14959C28.0262 2.3254 28.1249 2.56386 28.1249 2.8125V9.6875C28.1249 9.93614 28.0262 10.1746 27.8504 10.3504C27.6745 10.5262 27.4361 10.625 27.1874 10.625C26.9388 10.625 26.7003 10.5262 26.5245 10.3504C26.3487 10.1746 26.2499 9.93614 26.2499 9.6875V5.075L18.4749 12.85C18.3891 12.9421 18.2856 13.016 18.1706 13.0672C18.0556 13.1185 17.9315 13.146 17.8056 13.1482C17.6797 13.1505 17.5547 13.1273 17.438 13.0802C17.3212 13.033 17.2152 12.9628 17.1262 12.8738C17.0371 12.7848 16.9669 12.6787 16.9198 12.562C16.8726 12.4453 16.8495 12.3202 16.8517 12.1943C16.8539 12.0685 16.8815 11.9443 16.9327 11.8293C16.984 11.7143 17.0578 11.6108 17.1499 11.525L24.9249 3.75H20.3124C20.0638 3.75 19.8254 3.65123 19.6495 3.47541C19.4737 3.2996 19.3749 3.06114 19.3749 2.8125Z" fill="#FFCC00"/>
 												</svg>
 												<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path d="M3.125 5.3125C3.125 4.105 4.105 3.125 5.3125 3.125H15.9375C16.1861 3.125 16.4246 3.22377 16.6004 3.39959C16.7762 3.5754 16.875 3.81386 16.875 4.0625C16.875 4.31114 16.7762 4.5496 16.6004 4.72541C16.4246 4.90123 16.1861 5 15.9375 5H5.3125C5.22962 5 5.15013 5.03292 5.09153 5.09153C5.03292 5.15013 5 5.22962 5 5.3125V24.6875C5 24.86 5.14 25 5.3125 25H24.6875C24.7704 25 24.8499 24.9671 24.9085 24.9085C24.9671 24.8499 25 24.7704 25 24.6875V14.0625C25 13.8139 25.0988 13.5754 25.2746 13.3996C25.4504 13.2238 25.6889 13.125 25.9375 13.125C26.1861 13.125 26.4246 13.2238 26.6004 13.3996C26.7762 13.5754 26.875 13.8139 26.875 14.0625V24.6875C26.875 25.2677 26.6445 25.8241 26.2343 26.2343C25.8241 26.6445 25.2677 26.875 24.6875 26.875H5.3125C4.73234 26.875 4.17594 26.6445 3.7657 26.2343C3.35547 25.8241 3.125 25.2677 3.125 24.6875V5.3125Z" fill="#FFCC00"/>
 												</svg></a></div>
-																							<div class="swiper-slide"><a class="home-portfolio-item-link" href="/liom.html"><svg class="arrow" width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+																							<div class="swiper-slide"><a class="home-portfolio-item-link" href="/montegrappa.html"><svg class="arrow" width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path d="M19.3749 2.8125C19.3749 2.56386 19.4737 2.3254 19.6495 2.14959C19.8254 1.97377 20.0638 1.875 20.3124 1.875H27.1874C27.4361 1.875 27.6745 1.97377 27.8504 2.14959C28.0262 2.3254 28.1249 2.56386 28.1249 2.8125V9.6875C28.1249 9.93614 28.0262 10.1746 27.8504 10.3504C27.6745 10.5262 27.4361 10.625 27.1874 10.625C26.9388 10.625 26.7003 10.5262 26.5245 10.3504C26.3487 10.1746 26.2499 9.93614 26.2499 9.6875V5.075L18.4749 12.85C18.3891 12.9421 18.2856 13.016 18.1706 13.0672C18.0556 13.1185 17.9315 13.146 17.8056 13.1482C17.6797 13.1505 17.5547 13.1273 17.438 13.0802C17.3212 13.033 17.2152 12.9628 17.1262 12.8738C17.0371 12.7848 16.9669 12.6787 16.9198 12.562C16.8726 12.4453 16.8495 12.3202 16.8517 12.1943C16.8539 12.0685 16.8815 11.9443 16.9327 11.8293C16.984 11.7143 17.0578 11.6108 17.1499 11.525L24.9249 3.75H20.3124C20.0638 3.75 19.8254 3.65123 19.6495 3.47541C19.4737 3.2996 19.3749 3.06114 19.3749 2.8125Z" fill="#FFCC00"/>
 												</svg>
 												<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
