Final v.1.4.6 (Updated pages structure)

--- a/#src/html/doosan.html
+++ b/#src/html/doosan.html
@@ -71,14 +71,14 @@
     </div>
 </header>
 <main>
-    <section class="offer-section">
+    <section class="offer-section doosan-bg">
         <img src="images/doosan/doosan-award.svg" class="doosan-award" alt="doosan-award">
         <div class="container">
             <div class="offer-body">
                 <div class="offer-title-top">
                     <h1 class="offer-title wow fadeIn" data-wow-duration="1.5s" data-wow-delay="1s">DOOSAN</h1>
                 </div>
-                <div class="offer-title-bottom">
+                <div class="offer-title-bottom ds-offer-bottom">
                     <p class="offer-caption wow fadeIn" data-wow-duration="1.5s" data-wow-delay="1s">Для официального дистрибьютора <br> DOOSAN в Украине</p>
                 </div>
             </div>
@@ -165,7 +165,7 @@
     </section>
     <section class="pallete-section">
         <div class="container">
-            <div class="pallete-bg"></div>
+            <div class="pallete-bg doosan-pl-bg"></div>
             <div class="pallete-body">
                 <h2 class="pallete-title">
                     Цветовая палитра <br> и типографика
@@ -178,23 +178,23 @@
                     <div class="pallete-color">
                         <h3 class="pallete-color-title">Цвет</h3>
                         <div class="color-types">
-                            <div class="color-types-card wow fadeInLeft" data-wow-duration="1s">
+                            <div class="color-types-card pallete-ds-bg wow fadeInLeft" data-wow-duration="1s">
                                 <span></span>
                                 <p>#0175C2</p>
                             </div>
-                            <div class="color-types-card wow fadeInLeft" data-wow-duration="2s">
+                            <div class="color-types-card pallete-ds-bg wow fadeInLeft" data-wow-duration="2s">
                                 <span class="cardCol2"></span>
                                 <p>#4AB0E1</p>
                             </div>
-                            <div class="color-types-card wow fadeInLeft" data-wow-duration="3s">
+                            <div class="color-types-card pallete-ds-bg wow fadeInLeft" data-wow-duration="3s">
                                 <span class="cardCol3"></span>
                                 <p>#DAF1FF</p>
                             </div>
-                            <div class="color-types-card wow fadeInLeft" data-wow-duration="4s">
+                            <div class="color-types-card pallete-ds-bg wow fadeInLeft" data-wow-duration="4s">
                                 <span class="cardCol4"></span>
                                 <p>#A3A3A1</p>
                             </div>
-                            <div class="color-types-card wow fadeInLeft" data-wow-duration="5s">
+                            <div class="color-types-card pallete-ds-bg wow fadeInLeft" data-wow-duration="5s">
                                 <span class="cardCol5"></span>
                                 <p>#F3F5F4</p>
                             </div>
@@ -387,7 +387,7 @@
         </div>
     </section>
 </main>
-<footer class="footer-section">
+<footer class="footer-section doosan-footer-bg">
     <div class="container">
         <div class="footer">
             <h2>Следующий кейс</h2>
