--- a/#src/html/liom.html
+++ b/#src/html/liom.html
@@ -71,13 +71,13 @@
     </div>
 </header>
 <main>
-    <section class="offer-section">
+    <section class="offer-section liom-offer-bg">
         <div class="container">
             <div class="offer-body">
                 <div class="offer-title-top">
                     <h1 class="offer-title wow fadeIn" data-wow-duration="1.5s" data-wow-delay="1s">LIOM</h1>
                 </div>
-                <div class="offer-title-bottom">
+                <div class="offer-title-bottom lm-offer-bottom">
                     <p class="offer-caption wow fadeIn" data-wow-duration="1.5s" data-wow-delay="1s">Делают жизнь украинцев защищенной</p>
                 </div>
             </div>
@@ -163,7 +163,7 @@
     </section>
     <section class="pallete-section">
         <div class="container">
-            <div class="pallete-bg"></div>
+            <div class="pallete-bg liom-bg"></div>
             <div class="pallete-body">
                 <h2 class="pallete-title">
                     Цветовая палитра <br> и типографика
@@ -176,19 +176,19 @@
                     <div class="pallete-color">
                         <h3 class="pallete-color-title">Цвет</h3>
                         <div class="color-types">
-                            <div class="color-typesCard wow fadeInLeft" data-wow-duration="1s">
+                            <div class="color-typesCard pallete-lm-bg wow fadeInLeft" data-wow-duration="1s">
                                 <span></span>
                                 <p>#000000</p>
                             </div>
-                            <div class="color-typesCard wow fadeInLeft" data-wow-duration="2s">
+                            <div class="color-typesCard pallete-lm-bg wow fadeInLeft" data-wow-duration="2s">
                                 <span class="cardCol2"></span>
                                 <p>#FEFEFE</p>
                             </div>
-                            <div class="color-typesCard wow fadeInLeft" data-wow-duration="3s">
+                            <div class="color-typesCard pallete-lm-bg wow fadeInLeft" data-wow-duration="3s">
                                 <span class="cardCol3"></span>
                                 <p>#D31920</p>
                             </div>
-                            <div class="color-typesCard wow fadeInLeft" data-wow-duration="4s">
+                            <div class="color-typesCard pallete-lm-bg wow fadeInLeft" data-wow-duration="4s">
                                 <span class="cardCol4"></span>
                                 <p>#F6F6F6</p>
                             </div>
@@ -358,13 +358,13 @@
         </div>
     </section>
 </main>
-<footer class="footer-section">
+<footer class="footer-section liom-footer-bg">
     <div class="container">
         <div class="footer">
             <h2>Следующий кейс</h2>
             <div class="footer-info">
                 <a href="#" class="footer-infoImg">
-                    <img src="images/doosan/doosan-vitae.svg" alt="vitae">
+                    <img src="images/liom/liom-footerLogo.svg" alt="footerLogo">
                 </a>
                 <p>корпоративный сайт</p>
             </div>
