--- a/#src/html/montegrappa.html
+++ b/#src/html/montegrappa.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-    <title>Laconic Design - Liom</title>
+    <title>Laconic Design - Montegrappa</title>
     <meta name="description" content="Агенство Laconic Design - Комплексная разработка сайтов, создание уникального дизайна. Создание landing page, корпоративных сайтов.">
     <meta name="keywords" content="Laconic Studio">
     <meta name="author" content="">
@@ -14,8 +14,6 @@
     <link rel="icon" href="images/favicons/favicon.png" sizes="64x64">
     <link rel="apple-touch-icon" href="images/favicons/favicon.png">
     <meta name="msapplication-TileImage" content="images/favicons/favicon.png">
-    <!-- Lightbox -->
-    <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" integrity="sha512-ZKX+BvQihRJPA8CROKBhDNvoc2aDMOdAlcm7TUQY+35XYtrd3yh95QOOhsPDQY9QnKE0Wqag9y38OIgEvb88cA==" crossorigin="anonymous" />-->
     <!-- Fonts -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Animate CSS -->
@@ -24,7 +22,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <!--   CSS     -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
-
 </head>
 <body class="bl-scroll">
 <header class="header-section">
@@ -71,13 +68,13 @@
     </div>
 </header>
 <main>
-    <section class="offer-section">
+    <section class="offer-section montegrappa-bg">
         <div class="container">
             <div class="offer-body">
                 <div class="offer-title-top">
                     <h1 class="offer-title wow fadeIn" data-wow-duration="1.5s" data-wow-delay="1s">MONTEGRAPPA</h1>
                 </div>
-                <div class="offer-title-bottom">
+                <div class="offer-title-bottom mg-offer-bottom">
                     <p class="offer-caption wow fadeIn" data-wow-duration="1.5s" data-wow-delay="1s">В то время как другие изображают себя хранителями традиций, Монтеграппа по-прежнему твердо привержен традициям инноваций</p>
                 </div>
             </div>
@@ -162,7 +159,7 @@
     </section>
     <section class="pallete-section">
         <div class="container">
-            <div class="pallete-bg"></div>
+            <div class="pallete-bg pallete-mg-bg"></div>
             <div class="pallete-body">
                 <h2 class="pallete-title">
                     Цветовая палитра <br> и типографика
@@ -175,19 +172,19 @@
                     <div class="pallete-color">
                         <h3 class="pallete-color-title">Цвет</h3>
                         <div class="color-types">
-                            <div class="color-typesCard wow fadeInLeft" data-wow-duration="1s">
+                            <div class="color-typesCard color-types-mg wow fadeInLeft" data-wow-duration="1s">
                                 <span></span>
                                 <p>#0B0025</p>
                             </div>
-                            <div class="color-typesCard wow fadeInLeft" data-wow-duration="2s">
+                            <div class="color-typesCard color-types-mg wow fadeInLeft" data-wow-duration="2s">
                                 <span class="cardCol2"></span>
                                 <p>#FEFEFE</p>
                             </div>
-                            <div class="color-typesCard wow fadeInLeft" data-wow-duration="3s">
+                            <div class="color-typesCard color-types-mg wow fadeInLeft" data-wow-duration="3s">
                                 <span class="cardCol3"></span>
                                 <p>#F1F0FE</p>
                             </div>
-                            <div class="color-typesCard wow fadeInLeft" data-wow-duration="4s">
+                            <div class="color-typesCard color-types-mg wow fadeInLeft" data-wow-duration="4s">
                                 <span class="cardCol4"></span>
                                 <p>#000000</p>
                             </div>
@@ -367,13 +364,13 @@
         </div>
     </section>
 </main>
-<footer class="footer-section">
+<footer class="footer-section montegrappa-footer-bg">
     <div class="container">
         <div class="footer">
             <h2>Следующий кейс</h2>
             <div class="footer-info">
                 <a href="#" class="footer-infoImg">
-                    <img src="images/doosan/doosan-vitae.svg" alt="vitae">
+                    <img src="images/montegrappa/montegrappa-footerLogo.svg" alt="footerLogo">
                 </a>
                 <p>корпоративный сайт</p>
             </div>
