--- a/#src/html/unipro.html
+++ b/#src/html/unipro.html
@@ -167,7 +167,7 @@
     </section>
     <section class="pallete-section">
         <div class="container">
-            <div class="pallete-bg"></div>
+            <div class="pallete-bg pallege-un-bg"></div>
             <div class="pallete-body">
                 <h2 class="pallete-title">
                     Цветовая палитра <br> и типографика
